--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "@typescript-eslint/eslint-plugin": "4.16.1",
     "@typescript-eslint/parser": "4.16.1",
     "cordova-android": "^9.0.0",
-    "cordova-plugin-purchase": "^11.0.0",
+    "cordova-plugin-inapppurchase-2": "^2.0.3",
     "eslint": "^7.6.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "30.7.6",
@@ -99,7 +99,7 @@
       "onesignal-cordova-plugin": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-purchase": {}
+      "cordova-plugin-inapppurchase-2": {}
     },
     "platforms": [
       "android"
